--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
-    "mongodb": "^3.5.9"
-  },
-  "devDependencies": {
+    "mongodb": "^3.5.9",
     "mongoose": "^5.9.25"
-  }
+  },
+  "devDependencies": {}
 }
